--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,8 @@
 docker/db/data
 #docker/sample/*.sql
 #docker/db/*
-postgis-osm/*
+postgis-osm/osm/*
+!postgis-osm/osm/osmtest.md
+postgis-osm/pop_data/data/*
+postgis-osm/pop_data/JPN_adm/*
+!postgis-osm/pop_data/tutorial.md
